--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
                 <h2>Belize</h2>
             </div>
 
-            <div class="destination" id="barcelona">
+            <div class="destination" id="saopaolo">
                 <h2>Sao Paolo</h2>
             </div>
+
+            <div class="destination" id="goa">
+                <h2>Goa</h2>
+            </div>
+
+            <div class="destination" id="andamans">
+                <h2>Andamans</h2>
+            </div>
+
+
         </div>
     </div>
 
